# the_rust_programming_language

./: .gitignore
chapter1/: main.rs
chapter1/hello_cargo/: Cargo.toml
chapter10/aggregator/: Cargo.toml
chapter10/aggregator/src/: lib.rs  main.rs
chapter10/generics/: Cargo.toml
chapter10/generics/src/: main.rs
chapter10/lifetimes/: Cargo.toml
chapter10/lifetimes/src/: main.rs
chapter11/adder/: Cargo.toml
chapter11/adder/src/: lib.rs
chapter11/adder/tests/: integration_test.rs
chapter12/minigrep/: Cargo.toml
chapter13/closures/: Cargo.toml
chapter14/demo/: Cargo.toml
chapter14/my_crate/: Cargo.toml
chapter14/my_crate/src/: lib.rs  main.rs
chapter15/smart_pointers/: Cargo.toml
chapter16/concurrent/: Cargo.toml
chapter17/oop/: Cargo.toml
chapter18/patterns/: Cargo.toml
chapter19/advanced_features/: Cargo.toml  call_rust_from_c
chapter19/advanced_features/src/: lib.rs  macros.rs  main.rs  rust_hello.c  trates.rs
chapter19/hello_macro/: Cargo.toml
chapter19/panckages/: Cargo.toml
chapter2/guessing_game/: Cargo.toml
chapter2/guessing_game/src/: main.rs
chapter20/hello/: Cargo.toml
chapter21/appendix/: Cargo.toml
chapter3/branches/: Cargo.toml
chapter3/exercises/: Cargo.toml
chapter3/functions/: Cargo.toml
chapter3/loops/: Cargo.toml
chapter3/variables/: Cargo.toml
chapter4/ownership/: Cargo.toml
chapter5/rectangles/: Cargo.toml
chapter5/structs/: Cargo.toml
chapter6/enums/: Cargo.toml
chapter7/crates/: Cargo.toml
chapter8/collections/: Cargo.toml
chapter9/errors/: Cargo.toml
(+41 files in other folders)
